--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -4,3 +4,9 @@
     box-sizing: border-box;
     text-align: center;
 }
+
+button {
+    display: flex;
+    margin-left: 10%;
+    margin-top: 10%;
+}
