--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,12 +1,6 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-align: center;
-}
-
-button {
-    display: flex;
-    margin-left: 10%;
-    margin-top: 10%;
-}
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-align: center;
+}/*# sourceMappingURL=home.css.map */
