--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,24 +1,26 @@
 .login_body {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background: rgb(9, 121, 57);
+  background: linear-gradient(90deg, rgb(9, 121, 57) 0%, rgb(0, 255, 135) 100%);
 }
 
 .login {
-    height: 500px;
-    width: 40%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 5%;
-    border-radius: 15px;
-    margin-bottom: 5%;
-    background-color: #e5e5e5;
+  height: 500px;
+  width: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 5%;
+  border-radius: 15px;
+  margin-bottom: 5%;
+  background-color: #e5e5e5;
 }
 
 .user_data {
-    display: flex;
-    margin-top: 3%;
-}
+  display: flex;
+  margin-top: 3%;
+}/*# sourceMappingURL=Login.css.map */
